--- a/frontend/pages/courses_id/index.css
+++ b/frontend/pages/courses_id/index.css
@@ -44,11 +44,11 @@
         width: 100%;
       }
       div.first-column{
-        margin-right: 0;
+        padding-right: 0;
       }
       div.second-column{
-        margin-left: 0;
-        margin-top: 20px;
+        padding-left: 0;
+        padding-top: 20px;
       }
     }
   }
